src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALSE
    AND
    AS
    AUTO
    BREAK
    CASE
    CLASS
    CLOSE
    CONST
    CONTINUE
    DECREMENT
    DEFAULT
    DEL
    DIVEQUAL
    EXCEPT
    FROM
    GLOBAL
    IMPORT
    IN
    INCREMENT
    INPUT
    INT
    IS
    LAMBDA
    LEN
    LENGTH
    LSHIFT
    MINUSEQUAL
    MODEQUAL
    NONLOCAL
    NOT
    NULL
    ONE
    OPEN
    OR
    PASS
    PERIOD
    PLUSEQUAL
    RAISE
    RANGE
    READ
    RSHIFT
    RUE
    SIZEOF
    STATIC
    STR
    STRUCT
    SWITCH
    TIMESEQUAL
    TRY
    VECTOR
    VOID
    WITH
    WRITE
    XOR

Grammar

Rule 0     S' -> prog
Rule 1     prog -> empty
Rule 2     prog -> func prog
Rule 3     func -> DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
Rule 4     func -> DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI
Rule 5     body -> empty
Rule 6     body -> stmt body
Rule 7     stmt -> expr SEMI
Rule 8     stmt -> defvar SEMI
Rule 9     stmt -> return_instr SEMI
Rule 10    stmt -> single_if
Rule 11    stmt -> if_with_else
Rule 12    stmt -> while_loop
Rule 13    stmt -> for_loop
Rule 14    stmt -> block
Rule 15    stmt -> func
Rule 16    single_if -> IF LPAREN expr RPAREN stmt
Rule 17    if_with_else -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 18    while_loop -> WHILE LPAREN expr RPAREN stmt
Rule 19    for_loop -> FOR LPAREN ID EQUALS expr TO expr RPAREN stmt
Rule 20    block -> LBRACE body RBRACE
Rule 21    return_instr -> RETURN expr SEMI
Rule 22    defvar -> VAR TYPE ID
Rule 23    defvar -> VAR TYPE ID EQUALS expr
Rule 24    flist -> empty
Rule 25    flist -> TYPE ID
Rule 26    flist -> TYPE ID COMMA flist
Rule 27    clist -> empty
Rule 28    clist -> expr
Rule 29    clist -> expr COMMA clist
Rule 30    expr -> vector_index
Rule 31    expr -> expr_list
Rule 32    expr -> ternary_expr
Rule 33    expr -> LNOT expr
Rule 34    expr -> PLUS expr
Rule 35    expr -> MINUS expr
Rule 36    expr -> binary_expr
Rule 37    expr -> ID
Rule 38    expr -> assignment
Rule 39    expr -> function_call
Rule 40    expr -> NUMBER
Rule 41    expr -> STRING
Rule 42    expr_list -> LBRACKET clist RBRACKET
Rule 43    vector_index -> expr LBRACKET expr RBRACKET
Rule 44    assignment -> ID EQUALS expr
Rule 45    ternary_expr -> expr QUESTIONMARK expr COLON expr
Rule 46    function_call -> ID LPAREN clist RPAREN
Rule 47    binary_expr -> expr PLUS expr
Rule 48    binary_expr -> expr MINUS expr
Rule 49    binary_expr -> expr TIMES expr
Rule 50    binary_expr -> expr DIVIDE expr
Rule 51    binary_expr -> expr MODULO expr
Rule 52    binary_expr -> expr GT expr
Rule 53    binary_expr -> expr LT expr
Rule 54    binary_expr -> expr EQ expr
Rule 55    binary_expr -> expr LE expr
Rule 56    binary_expr -> expr GE expr
Rule 57    binary_expr -> expr NE expr
Rule 58    binary_expr -> expr LOR expr
Rule 59    binary_expr -> expr LAND expr
Rule 60    empty -> <empty>

Terminals, with rules where they appear

ALSE                 : 
AND                  : 
AS                   : 
AUTO                 : 
BREAK                : 
CASE                 : 
CLASS                : 
CLOSE                : 
COLON                : 45
COMMA                : 26 29
CONST                : 
CONTINUE             : 
DECREMENT            : 
DEF                  : 3 4
DEFAULT              : 
DEL                  : 
DIVEQUAL             : 
DIVIDE               : 50
ELSE                 : 17
EQ                   : 54
EQUALS               : 19 23 44
EXCEPT               : 
FOR                  : 19
FROM                 : 
GE                   : 56
GLOBAL               : 
GT                   : 52
ID                   : 3 4 19 22 23 25 26 37 44 46
IF                   : 16 17
IMPORT               : 
IN                   : 
INCREMENT            : 
INPUT                : 
INT                  : 
IS                   : 
LAMBDA               : 
LAND                 : 59
LBRACE               : 3 20
LBRACKET             : 42 43
LE                   : 55
LEN                  : 
LENGTH               : 
LNOT                 : 33
LOR                  : 58
LPAREN               : 3 4 16 17 18 19 46
LSHIFT               : 
LT                   : 53
MINUS                : 35 48
MINUSEQUAL           : 
MODEQUAL             : 
MODULO               : 51
NE                   : 57
NONLOCAL             : 
NOT                  : 
NULL                 : 
NUMBER               : 40
ONE                  : 
OPEN                 : 
OR                   : 
PASS                 : 
PERIOD               : 
PLUS                 : 34 47
PLUSEQUAL            : 
QUESTIONMARK         : 45
RAISE                : 
RANGE                : 
RBRACE               : 3 20
RBRACKET             : 42 43
READ                 : 
RETURN               : 4 21
RPAREN               : 3 4 16 17 18 19 46
RSHIFT               : 
RUE                  : 
SEMI                 : 4 7 8 9 21
SIZEOF               : 
STATIC               : 
STR                  : 
STRING               : 41
STRUCT               : 
SWITCH               : 
TIMES                : 49
TIMESEQUAL           : 
TO                   : 19
TRY                  : 
TYPE                 : 3 4 22 23 25 26
VAR                  : 22 23
VECTOR               : 
VOID                 : 
WHILE                : 18
WITH                 : 
WRITE                : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

assignment           : 38
binary_expr          : 36
block                : 14
body                 : 3 6 20
clist                : 29 42 46
defvar               : 8
empty                : 1 5 24 27
expr                 : 4 7 16 17 18 19 19 21 23 28 29 33 34 35 43 43 44 45 45 45 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59
expr_list            : 31
flist                : 3 4 26
for_loop             : 13
func                 : 2 15
function_call        : 39
if_with_else         : 11
prog                 : 2 0
return_instr         : 9
single_if            : 10
stmt                 : 6 16 17 17 18 19
ternary_expr         : 32
vector_index         : 30
while_loop           : 12

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . empty
    (2) prog -> . func prog
    (60) empty -> .
    (3) func -> . DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> . DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI

    $end            reduce using rule 60 (empty -> .)
    DEF             shift and go to state 4

    prog                           shift and go to state 1
    empty                          shift and go to state 2
    func                           shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> empty .

    $end            reduce using rule 1 (prog -> empty .)


state 3

    (2) prog -> func . prog
    (1) prog -> . empty
    (2) prog -> . func prog
    (60) empty -> .
    (3) func -> . DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> . DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI

    $end            reduce using rule 60 (empty -> .)
    DEF             shift and go to state 4

    func                           shift and go to state 3
    prog                           shift and go to state 5
    empty                          shift and go to state 2

state 4

    (3) func -> DEF . TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> DEF . TYPE ID LPAREN flist RPAREN RETURN expr SEMI

    TYPE            shift and go to state 6


state 5

    (2) prog -> func prog .

    $end            reduce using rule 2 (prog -> func prog .)


state 6

    (3) func -> DEF TYPE . ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> DEF TYPE . ID LPAREN flist RPAREN RETURN expr SEMI

    ID              shift and go to state 7


state 7

    (3) func -> DEF TYPE ID . LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> DEF TYPE ID . LPAREN flist RPAREN RETURN expr SEMI

    LPAREN          shift and go to state 8


state 8

    (3) func -> DEF TYPE ID LPAREN . flist RPAREN LBRACE body RBRACE
    (4) func -> DEF TYPE ID LPAREN . flist RPAREN RETURN expr SEMI
    (24) flist -> . empty
    (25) flist -> . TYPE ID
    (26) flist -> . TYPE ID COMMA flist
    (60) empty -> .

    TYPE            shift and go to state 9
    RPAREN          reduce using rule 60 (empty -> .)

    flist                          shift and go to state 10
    empty                          shift and go to state 11

state 9

    (25) flist -> TYPE . ID
    (26) flist -> TYPE . ID COMMA flist

    ID              shift and go to state 12


state 10

    (3) func -> DEF TYPE ID LPAREN flist . RPAREN LBRACE body RBRACE
    (4) func -> DEF TYPE ID LPAREN flist . RPAREN RETURN expr SEMI

    RPAREN          shift and go to state 13


state 11

    (24) flist -> empty .

    RPAREN          reduce using rule 24 (flist -> empty .)


state 12

    (25) flist -> TYPE ID .
    (26) flist -> TYPE ID . COMMA flist

    RPAREN          reduce using rule 25 (flist -> TYPE ID .)
    COMMA           shift and go to state 14


state 13

    (3) func -> DEF TYPE ID LPAREN flist RPAREN . LBRACE body RBRACE
    (4) func -> DEF TYPE ID LPAREN flist RPAREN . RETURN expr SEMI

    LBRACE          shift and go to state 15
    RETURN          shift and go to state 16


state 14

    (26) flist -> TYPE ID COMMA . flist
    (24) flist -> . empty
    (25) flist -> . TYPE ID
    (26) flist -> . TYPE ID COMMA flist
    (60) empty -> .

    TYPE            shift and go to state 9
    RPAREN          reduce using rule 60 (empty -> .)

    flist                          shift and go to state 17
    empty                          shift and go to state 11

state 15

    (3) func -> DEF TYPE ID LPAREN flist RPAREN LBRACE . body RBRACE
    (5) body -> . empty
    (6) body -> . stmt body
    (60) empty -> .
    (7) stmt -> . expr SEMI
    (8) stmt -> . defvar SEMI
    (9) stmt -> . return_instr SEMI
    (10) stmt -> . single_if
    (11) stmt -> . if_with_else
    (12) stmt -> . while_loop
    (13) stmt -> . for_loop
    (14) stmt -> . block
    (15) stmt -> . func
    (30) expr -> . vector_index
    (31) expr -> . expr_list
    (32) expr -> . ternary_expr
    (33) expr -> . LNOT expr
    (34) expr -> . PLUS expr
    (35) expr -> . MINUS expr
    (36) expr -> . binary_expr
    (37) expr -> . ID
    (38) expr -> . assignment
    (39) expr -> . function_call
    (40) expr -> . NUMBER
    (41) expr -> . STRING
    (22) defvar -> . VAR TYPE ID
    (23) defvar -> . VAR TYPE ID EQUALS expr
    (21) return_instr -> . RETURN expr SEMI
    (16) single_if -> . IF LPAREN expr RPAREN stmt
    (17) if_with_else -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (18) while_loop -> . WHILE LPAREN expr RPAREN stmt
    (19) for_loop -> . FOR LPAREN ID EQUALS expr TO expr RPAREN stmt
    (20) block -> . LBRACE body RBRACE
    (3) func -> . DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> . DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI
    (43) vector_index -> . expr LBRACKET expr RBRACKET
    (42) expr_list -> . LBRACKET clist RBRACKET
    (45) ternary_expr -> . expr QUESTIONMARK expr COLON expr
    (47) binary_expr -> . expr PLUS expr
    (48) binary_expr -> . expr MINUS expr
    (49) binary_expr -> . expr TIMES expr
    (50) binary_expr -> . expr DIVIDE expr
    (51) binary_expr -> . expr MODULO expr
    (52) binary_expr -> . expr GT expr
    (53) binary_expr -> . expr LT expr
    (54) binary_expr -> . expr EQ expr
    (55) binary_expr -> . expr LE expr
    (56) binary_expr -> . expr GE expr
    (57) binary_expr -> . expr NE expr
    (58) binary_expr -> . expr LOR expr
    (59) binary_expr -> . expr LAND expr
    (44) assignment -> . ID EQUALS expr
    (46) function_call -> . ID LPAREN clist RPAREN

    RBRACE          reduce using rule 60 (empty -> .)
    LNOT            shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    ID              shift and go to state 18
    NUMBER          shift and go to state 41
    STRING          shift and go to state 42
    VAR             shift and go to state 43
    RETURN          shift and go to state 44
    IF              shift and go to state 45
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    LBRACE          shift and go to state 19
    DEF             shift and go to state 4
    LBRACKET        shift and go to state 48

    body                           shift and go to state 20
    empty                          shift and go to state 21
    stmt                           shift and go to state 22
    expr                           shift and go to state 23
    defvar                         shift and go to state 24
    return_instr                   shift and go to state 25
    single_if                      shift and go to state 26
    if_with_else                   shift and go to state 27
    while_loop                     shift and go to state 28
    for_loop                       shift and go to state 29
    block                          shift and go to state 30
    func                           shift and go to state 31
    vector_index                   shift and go to state 32
    expr_list                      shift and go to state 33
    ternary_expr                   shift and go to state 34
    binary_expr                    shift and go to state 38
    assignment                     shift and go to state 39
    function_call                  shift and go to state 40

state 16

    (4) func -> DEF TYPE ID LPAREN flist RPAREN RETURN . expr SEMI
    (30) expr -> . vector_index
    (31) expr -> . expr_list
    (32) expr -> . ternary_expr
    (33) expr -> . LNOT expr
    (34) expr -> . PLUS expr
    (35) expr -> . MINUS expr
    (36) expr -> . binary_expr
    (37) expr -> . ID
    (38) expr -> . assignment
    (39) expr -> . function_call
    (40) expr -> . NUMBER
    (41) expr -> . STRING
    (43) vector_index -> . expr LBRACKET expr RBRACKET
    (42) expr_list -> . LBRACKET clist RBRACKET
    (45) ternary_expr -> . expr QUESTIONMARK expr COLON expr
    (47) binary_expr -> . expr PLUS expr
    (48) binary_expr -> . expr MINUS expr
    (49) binary_expr -> . expr TIMES expr
    (50) binary_expr -> . expr DIVIDE expr
    (51) binary_expr -> . expr MODULO expr
    (52) binary_expr -> . expr GT expr
    (53) binary_expr -> . expr LT expr
    (54) binary_expr -> . expr EQ expr
    (55) binary_expr -> . expr LE expr
    (56) binary_expr -> . expr GE expr
    (57) binary_expr -> . expr NE expr
    (58) binary_expr -> . expr LOR expr
    (59) binary_expr -> . expr LAND expr
    (44) assignment -> . ID EQUALS expr
    (46) function_call -> . ID LPAREN clist RPAREN

    LNOT            shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    ID              shift and go to state 18
    NUMBER          shift and go to state 41
    STRING          shift and go to state 42
    LBRACKET        shift and go to state 48

    expr                           shift and go to state 49
    vector_index                   shift and go to state 32
    expr_list                      shift and go to state 33
    ternary_expr                   shift and go to state 34
    binary_expr                    shift and go to state 38
    assignment                     shift and go to state 39
    function_call                  shift and go to state 40

state 17

    (26) flist -> TYPE ID COMMA flist .

    RPAREN          reduce using rule 26 (flist -> TYPE ID COMMA flist .)


state 18

    (37) expr -> ID .
    (44) assignment -> ID . EQUALS expr
    (46) function_call -> ID . LPAREN clist RPAREN

    SEMI            reduce using rule 37 (expr -> ID .)
    LBRACKET        reduce using rule 37 (expr -> ID .)
    QUESTIONMARK    reduce using rule 37 (expr -> ID .)
    PLUS            reduce using rule 37 (expr -> ID .)
    MINUS           reduce using rule 37 (expr -> ID .)
    TIMES           reduce using rule 37 (expr -> ID .)
    DIVIDE          reduce using rule 37 (expr -> ID .)
    MODULO          reduce using rule 37 (expr -> ID .)
    GT              reduce using rule 37 (expr -> ID .)
    LT              reduce using rule 37 (expr -> ID .)
    EQ              reduce using rule 37 (expr -> ID .)
    LE              reduce using rule 37 (expr -> ID .)
    GE              reduce using rule 37 (expr -> ID .)
    NE              reduce using rule 37 (expr -> ID .)
    LOR             reduce using rule 37 (expr -> ID .)
    LAND            reduce using rule 37 (expr -> ID .)
    COMMA           reduce using rule 37 (expr -> ID .)
    RBRACKET        reduce using rule 37 (expr -> ID .)
    RPAREN          reduce using rule 37 (expr -> ID .)
    COLON           reduce using rule 37 (expr -> ID .)
    TO              reduce using rule 37 (expr -> ID .)
    EQUALS          shift and go to state 50
    LPAREN          shift and go to state 51


state 19

    (20) block -> LBRACE . body RBRACE
    (5) body -> . empty
    (6) body -> . stmt body
    (60) empty -> .
    (7) stmt -> . expr SEMI
    (8) stmt -> . defvar SEMI
    (9) stmt -> . return_instr SEMI
    (10) stmt -> . single_if
    (11) stmt -> . if_with_else
    (12) stmt -> . while_loop
    (13) stmt -> . for_loop
    (14) stmt -> . block
    (15) stmt -> . func
    (30) expr -> . vector_index
    (31) expr -> . expr_list
    (32) expr -> . ternary_expr
    (33) expr -> . LNOT expr
    (34) expr -> . PLUS expr
    (35) expr -> . MINUS expr
    (36) expr -> . binary_expr
    (37) expr -> . ID
    (38) expr -> . assignment
    (39) expr -> . function_call
    (40) expr -> . NUMBER
    (41) expr -> . STRING
    (22) defvar -> . VAR TYPE ID
    (23) defvar -> . VAR TYPE ID EQUALS expr
    (21) return_instr -> . RETURN expr SEMI
    (16) single_if -> . IF LPAREN expr RPAREN stmt
    (17) if_with_else -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (18) while_loop -> . WHILE LPAREN expr RPAREN stmt
    (19) for_loop -> . FOR LPAREN ID EQUALS expr TO expr RPAREN stmt
    (20) block -> . LBRACE body RBRACE
    (3) func -> . DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> . DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI
    (43) vector_index -> . expr LBRACKET expr RBRACKET
    (42) expr_list -> . LBRACKET clist RBRACKET
    (45) ternary_expr -> . expr QUESTIONMARK expr COLON expr
    (47) binary_expr -> . expr PLUS expr
    (48) binary_expr -> . expr MINUS expr
    (49) binary_expr -> . expr TIMES expr
    (50) binary_expr -> . expr DIVIDE expr
    (51) binary_expr -> . expr MODULO expr
    (52) binary_expr -> . expr GT expr
    (53) binary_expr -> . expr LT expr
    (54) binary_expr -> . expr EQ expr
    (55) binary_expr -> . expr LE expr
    (56) binary_expr -> . expr GE expr
    (57) binary_expr -> . expr NE expr
    (58) binary_expr -> . expr LOR expr
    (59) binary_expr -> . expr LAND expr
    (44) assignment -> . ID EQUALS expr
    (46) function_call -> . ID LPAREN clist RPAREN

    RBRACE          reduce using rule 60 (empty -> .)
    LNOT            shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    ID              shift and go to state 18
    NUMBER          shift and go to state 41
    STRING          shift and go to state 42
    VAR             shift and go to state 43
    RETURN          shift and go to state 44
    IF              shift and go to state 45
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    LBRACE          shift and go to state 19
    DEF             shift and go to state 4
    LBRACKET        shift and go to state 48

    body                           shift and go to state 52
    empty                          shift and go to state 21
    stmt                           shift and go to state 22
    expr                           shift and go to state 23
    defvar                         shift and go to state 24
    return_instr                   shift and go to state 25
    single_if                      shift and go to state 26
    if_with_else                   shift and go to state 27
    while_loop                     shift and go to state 28
    for_loop                       shift and go to state 29
    block                          shift and go to state 30
    func                           shift and go to state 31
    vector_index                   shift and go to state 32
    expr_list                      shift and go to state 33
    ternary_expr                   shift and go to state 34
    binary_expr                    shift and go to state 38
    assignment                     shift and go to state 39
    function_call                  shift and go to state 40

state 20

    (3) func -> DEF TYPE ID LPAREN flist RPAREN LBRACE body . RBRACE

    RBRACE          shift and go to state 53


state 21

    (5) body -> empty .

    RBRACE          reduce using rule 5 (body -> empty .)


state 22

    (6) body -> stmt . body
    (5) body -> . empty
    (6) body -> . stmt body
    (60) empty -> .
    (7) stmt -> . expr SEMI
    (8) stmt -> . defvar SEMI
    (9) stmt -> . return_instr SEMI
    (10) stmt -> . single_if
    (11) stmt -> . if_with_else
    (12) stmt -> . while_loop
    (13) stmt -> . for_loop
    (14) stmt -> . block
    (15) stmt -> . func
    (30) expr -> . vector_index
    (31) expr -> . expr_list
    (32) expr -> . ternary_expr
    (33) expr -> . LNOT expr
    (34) expr -> . PLUS expr
    (35) expr -> . MINUS expr
    (36) expr -> . binary_expr
    (37) expr -> . ID
    (38) expr -> . assignment
    (39) expr -> . function_call
    (40) expr -> . NUMBER
    (41) expr -> . STRING
    (22) defvar -> . VAR TYPE ID
    (23) defvar -> . VAR TYPE ID EQUALS expr
    (21) return_instr -> . RETURN expr SEMI
    (16) single_if -> . IF LPAREN expr RPAREN stmt
    (17) if_with_else -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (18) while_loop -> . WHILE LPAREN expr RPAREN stmt
    (19) for_loop -> . FOR LPAREN ID EQUALS expr TO expr RPAREN stmt
    (20) block -> . LBRACE body RBRACE
    (3) func -> . DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> . DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI
    (43) vector_index -> . expr LBRACKET expr RBRACKET
    (42) expr_list -> . LBRACKET clist RBRACKET
    (45) ternary_expr -> . expr QUESTIONMARK expr COLON expr
    (47) binary_expr -> . expr PLUS expr
    (48) binary_expr -> . expr MINUS expr
    (49) binary_expr -> . expr TIMES expr
    (50) binary_expr -> . expr DIVIDE expr
    (51) binary_expr -> . expr MODULO expr
    (52) binary_expr -> . expr GT expr
    (53) binary_expr -> . expr LT expr
    (54) binary_expr -> . expr EQ expr
    (55) binary_expr -> . expr LE expr
    (56) binary_expr -> . expr GE expr
    (57) binary_expr -> . expr NE expr
    (58) binary_expr -> . expr LOR expr
    (59) binary_expr -> . expr LAND expr
    (44) assignment -> . ID EQUALS expr
    (46) function_call -> . ID LPAREN clist RPAREN

    RBRACE          reduce using rule 60 (empty -> .)
    LNOT            shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    ID              shift and go to state 18
    NUMBER          shift and go to state 41
    STRING          shift and go to state 42
    VAR             shift and go to state 43
    RETURN          shift and go to state 44
    IF              shift and go to state 45
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    LBRACE          shift and go to state 19
    DEF             shift and go to state 4
    LBRACKET        shift and go to state 48

    stmt                           shift and go to state 22
    body                           shift and go to state 54
    empty                          shift and go to state 21
    expr                           shift and go to state 23
    defvar                         shift and go to state 24
    return_instr                   shift and go to state 25
    single_if                      shift and go to state 26
    if_with_else                   shift and go to state 27
    while_loop                     shift and go to state 28
    for_loop                       shift and go to state 29
    block                          shift and go to state 30
    func                           shift and go to state 31
    vector_index                   shift and go to state 32
    expr_list                      shift and go to state 33
    ternary_expr                   shift and go to state 34
    binary_expr                    shift and go to state 38
    assignment                     shift and go to state 39
    function_call                  shift and go to state 40

state 23

    (7) stmt -> expr . SEMI
    (43) vector_index -> expr . LBRACKET expr RBRACKET
    (45) ternary_expr -> expr . QUESTIONMARK expr COLON expr
    (47) binary_expr -> expr . PLUS expr
    (48) binary_expr -> expr . MINUS expr
    (49) binary_expr -> expr . TIMES expr
    (50) binary_expr -> expr . DIVIDE expr
    (51) binary_expr -> expr . MODULO expr
    (52) binary_expr -> expr . GT expr
    (53) binary_expr -> expr . LT expr
    (54) binary_expr -> expr . EQ expr
    (55) binary_expr -> expr . LE expr
    (56) binary_expr -> expr . GE expr
    (57) binary_expr -> expr . NE expr
    (58) binary_expr -> expr . LOR expr
    (59) binary_expr -> expr . LAND expr

    SEMI            shift and go to state 55
    LBRACKET        shift and go to state 56
    QUESTIONMARK    shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 59
    TIMES           shift and go to state 60
    DIVIDE          shift and go to state 61
    MODULO          shift and go to state 62
    GT              shift and go to state 63
    LT              shift and go to state 64
    EQ              shift and go to state 65
    LE              shift and go to state 66
    GE              shift and go to state 67
    NE              shift and go to state 68
    LOR             shift and go to state 69
    LAND            shift and go to state 70


state 24

    (8) stmt -> defvar . SEMI

    SEMI            shift and go to state 71


state 25

    (9) stmt -> return_instr . SEMI

    SEMI            shift and go to state 72


state 26

    (10) stmt -> single_if .

    LNOT            reduce using rule 10 (stmt -> single_if .)
    PLUS            reduce using rule 10 (stmt -> single_if .)
    MINUS           reduce using rule 10 (stmt -> single_if .)
    ID              reduce using rule 10 (stmt -> single_if .)
    NUMBER          reduce using rule 10 (stmt -> single_if .)
    STRING          reduce using rule 10 (stmt -> single_if .)
    VAR             reduce using rule 10 (stmt -> single_if .)
    RETURN          reduce using rule 10 (stmt -> single_if .)
    IF              reduce using rule 10 (stmt -> single_if .)
    WHILE           reduce using rule 10 (stmt -> single_if .)
    FOR             reduce using rule 10 (stmt -> single_if .)
    LBRACE          reduce using rule 10 (stmt -> single_if .)
    DEF             reduce using rule 10 (stmt -> single_if .)
    LBRACKET        reduce using rule 10 (stmt -> single_if .)
    RBRACE          reduce using rule 10 (stmt -> single_if .)
    ELSE            reduce using rule 10 (stmt -> single_if .)


state 27

    (11) stmt -> if_with_else .

    LNOT            reduce using rule 11 (stmt -> if_with_else .)
    PLUS            reduce using rule 11 (stmt -> if_with_else .)
    MINUS           reduce using rule 11 (stmt -> if_with_else .)
    ID              reduce using rule 11 (stmt -> if_with_else .)
    NUMBER          reduce using rule 11 (stmt -> if_with_else .)
    STRING          reduce using rule 11 (stmt -> if_with_else .)
    VAR             reduce using rule 11 (stmt -> if_with_else .)
    RETURN          reduce using rule 11 (stmt -> if_with_else .)
    IF              reduce using rule 11 (stmt -> if_with_else .)
    WHILE           reduce using rule 11 (stmt -> if_with_else .)
    FOR             reduce using rule 11 (stmt -> if_with_else .)
    LBRACE          reduce using rule 11 (stmt -> if_with_else .)
    DEF             reduce using rule 11 (stmt -> if_with_else .)
    LBRACKET        reduce using rule 11 (stmt -> if_with_else .)
    RBRACE          reduce using rule 11 (stmt -> if_with_else .)
    ELSE            reduce using rule 11 (stmt -> if_with_else .)


state 28

    (12) stmt -> while_loop .

    LNOT            reduce using rule 12 (stmt -> while_loop .)
    PLUS            reduce using rule 12 (stmt -> while_loop .)
    MINUS           reduce using rule 12 (stmt -> while_loop .)
    ID              reduce using rule 12 (stmt -> while_loop .)
    NUMBER          reduce using rule 12 (stmt -> while_loop .)
    STRING          reduce using rule 12 (stmt -> while_loop .)
    VAR             reduce using rule 12 (stmt -> while_loop .)
    RETURN          reduce using rule 12 (stmt -> while_loop .)
    IF              reduce using rule 12 (stmt -> while_loop .)
    WHILE           reduce using rule 12 (stmt -> while_loop .)
    FOR             reduce using rule 12 (stmt -> while_loop .)
    LBRACE          reduce using rule 12 (stmt -> while_loop .)
    DEF             reduce using rule 12 (stmt -> while_loop .)
    LBRACKET        reduce using rule 12 (stmt -> while_loop .)
    RBRACE          reduce using rule 12 (stmt -> while_loop .)
    ELSE            reduce using rule 12 (stmt -> while_loop .)


state 29

    (13) stmt -> for_loop .

    LNOT            reduce using rule 13 (stmt -> for_loop .)
    PLUS            reduce using rule 13 (stmt -> for_loop .)
    MINUS           reduce using rule 13 (stmt -> for_loop .)
    ID              reduce using rule 13 (stmt -> for_loop .)
    NUMBER          reduce using rule 13 (stmt -> for_loop .)
    STRING          reduce using rule 13 (stmt -> for_loop .)
    VAR             reduce using rule 13 (stmt -> for_loop .)
    RETURN          reduce using rule 13 (stmt -> for_loop .)
    IF              reduce using rule 13 (stmt -> for_loop .)
    WHILE           reduce using rule 13 (stmt -> for_loop .)
    FOR             reduce using rule 13 (stmt -> for_loop .)
    LBRACE          reduce using rule 13 (stmt -> for_loop .)
    DEF             reduce using rule 13 (stmt -> for_loop .)
    LBRACKET        reduce using rule 13 (stmt -> for_loop .)
    RBRACE          reduce using rule 13 (stmt -> for_loop .)
    ELSE            reduce using rule 13 (stmt -> for_loop .)


state 30

    (14) stmt -> block .

    LNOT            reduce using rule 14 (stmt -> block .)
    PLUS            reduce using rule 14 (stmt -> block .)
    MINUS           reduce using rule 14 (stmt -> block .)
    ID              reduce using rule 14 (stmt -> block .)
    NUMBER          reduce using rule 14 (stmt -> block .)
    STRING          reduce using rule 14 (stmt -> block .)
    VAR             reduce using rule 14 (stmt -> block .)
    RETURN          reduce using rule 14 (stmt -> block .)
    IF              reduce using rule 14 (stmt -> block .)
    WHILE           reduce using rule 14 (stmt -> block .)
    FOR             reduce using rule 14 (stmt -> block .)
    LBRACE          reduce using rule 14 (stmt -> block .)
    DEF             reduce using rule 14 (stmt -> block .)
    LBRACKET        reduce using rule 14 (stmt -> block .)
    RBRACE          reduce using rule 14 (stmt -> block .)
    ELSE            reduce using rule 14 (stmt -> block .)


state 31

    (15) stmt -> func .

    LNOT            reduce using rule 15 (stmt -> func .)
    PLUS            reduce using rule 15 (stmt -> func .)
    MINUS           reduce using rule 15 (stmt -> func .)
    ID              reduce using rule 15 (stmt -> func .)
    NUMBER          reduce using rule 15 (stmt -> func .)
    STRING          reduce using rule 15 (stmt -> func .)
    VAR             reduce using rule 15 (stmt -> func .)
    RETURN          reduce using rule 15 (stmt -> func .)
    IF              reduce using rule 15 (stmt -> func .)
    WHILE           reduce using rule 15 (stmt -> func .)
    FOR             reduce using rule 15 (stmt -> func .)
    LBRACE          reduce using rule 15 (stmt -> func .)
    DEF             reduce using rule 15 (stmt -> func .)
    LBRACKET        reduce using rule 15 (stmt -> func .)
    RBRACE          reduce using rule 15 (stmt -> func .)
    ELSE            reduce using rule 15 (stmt -> func .)


state 32

    (30) expr -> vector_index .

    SEMI            reduce using rule 30 (expr -> vector_index .)
    LBRACKET        reduce using rule 30 (expr -> vector_index .)
    QUESTIONMARK    reduce using rule 30 (expr -> vector_index .)
    PLUS            reduce using rule 30 (expr -> vector_index .)
    MINUS           reduce using rule 30 (expr -> vector_index .)
    TIMES           reduce using rule 30 (expr -> vector_index .)
    DIVIDE          reduce using rule 30 (expr -> vector_index .)
    MODULO          reduce using rule 30 (expr -> vector_index .)
    GT              reduce using rule 30 (expr -> vector_index .)
    LT              reduce using rule 30 (expr -> vector_index .)
    EQ              reduce using rule 30 (expr -> vector_index .)
    LE              reduce using rule 30 (expr -> vector_index .)
    GE              reduce using rule 30 (expr -> vector_index .)
    NE              reduce using rule 30 (expr -> vector_index .)
    LOR             reduce using rule 30 (expr -> vector_index .)
    LAND            reduce using rule 30 (expr -> vector_index .)
    COMMA           reduce using rule 30 (expr -> vector_index .)
    RBRACKET        reduce using rule 30 (expr -> vector_index .)
    RPAREN          reduce using rule 30 (expr -> vector_index .)
    COLON           reduce using rule 30 (expr -> vector_index .)
    TO              reduce using rule 30 (expr -> vector_index .)


state 33

    (31) expr -> expr_list .
